# anpr-client-web

./: README.md  bun.lockb  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  App2.tsx  CameraPageV2.tsx  PortPageV2.tsx  PortSettingsDialog.tsx  StreamCreateDialog.tsx  main.tsx
src-tauri/: Cargo.toml  dev.db  diesel.toml  tauri.conf.json  test_2.xlsx
src-tauri/capabilities/: migrated.json
src-tauri/migrations/2024-07-01-095320_create_car_weights_auto/: up.sql
src-tauri/migrations/2024-07-01-095439_create_car_weight_manual/: up.sql
src-tauri/migrations/2024-07-01-095444_create_counterparty/: up.sql
src-tauri/src/: camera_commands.rs  commands.rs  database.rs  lib.rs  main.rs  models.rs  port_commands.rs  rf_shared_state.rs  schema.rs  shared_state.rs
src-tauri/src/refactor/: mod.rs
src-tauri/src/refactorv2/: mod.rs
src/components/AutoCar/: AutoCarItemsList.tsx  CreateAutoCarItem.tsx  UpdateAutoCarItem.tsx
src/components/Camera/: CameraPage.tsx  StreamSettingsDialog.tsx  VideoPlayer.tsx
src/components/Counterparty/: CounterpartyItemsList.tsx  CreateCounterpartyItem.tsx  UpdateCounterpartyItem.tsx
src/components/ManualCar/: CreateManualCarItem.tsx  ManualCarItemsList.tsx  UpdateManualCarItem.tsx
src/components/Port/: PortList.tsx  PortPage.tsx
src/refactored/: Camera.tsx  Sidebar.tsx
src/refactored/coms/: CameraGrid.tsx  CameraSettingsDialog.tsx  PortSettingsDialog.tsx
src/refactored/stores/: CameraStore.tsx
