[package]
name = "anpr-client"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }


[dependencies]
tauri = { version = "1", features = [ "dialog-open", "fs-read-file", "fs-write-file", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ANPR_bind = {path = "../../ANPR_bind"}
tokio = { version = "1.38.0", features = ["full"] }
[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
