[package]
name = "anpr_client"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "anpr_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ANPR_bind = {path = "../../ANPR_bind"}
tokio = { version = "1.38.0", features = ["full"] }
serialport = "4.4.0"
lazy_static = "1.5.0"
rand = "0.8.5"
dotenvy = "0.15"
diesel = { version = "2.2.0", features = ["sqlite", "r2d2"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
tauri-plugin-dialog = "2.0.0-beta.10"
tauri-plugin-fs = "2.0.0-beta.10"
tauri-plugin-shell = "2.0.0-beta.8"
tauri-plugin-notification = "2.0.0-beta.9"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
